@@ -14,3 +14,4 @@
 - strictop: deny opping users with CHAN OP or !op
 - add unbanme command (remove internal and channel ban)
 - add !topicappend
+- add !regexpcheck, returns users affected
